# animl-r

./: .Rbuildignore  .Rhistory  .gitignore  .gitignore.save  ClassificationWorkflow.R  DESCRIPTION  ImageCropGenerator.py  LICENSE  LICENSE.md  NAMESPACE  README.md  animl-env.yml  setup.cfg
R/: .Rhistory  applyPredictions.R  bestGuess.R  buildDirectories.R  checkFalsePositive.R  checkMD(todo).R  checkMD.R  classification.R  classifyMD.R  classifySequence(todo).R  classifySequence.R  classifySpecies.R  convertCoordinates.R  convertMDresults.R  correctResults.R  crop_generator.R  dataManagement.R  decodeImage.R  detect.R  detectMD.R  extractBoxes(defunct).R  extractBoxes.R  extractFiles.R  fileManagement.R  fileManifest.R  generateCrops.R  generators.R  imagesFromVideos.R  initiateOrbweaver.R  loadData.R  loadMDModel.R  loadMDmodel.R  multispecies(todo).R  multispecies.R  parseMD.R  parseMDjson.R  pipeline.R  plotBoxes(defunct).R  plotBoxes.R  pocketMD.R  (+19 more)
animl-py/: README.md  environment.yml  setup.cfg
animl-py/src/animl/: CsvGenerator.py  DetectMD.py  FileManagement.py  ImageCropGenerator.py  PredictImages.py  StrikeforceScraper.py  SymlinkClasses.py  TFDetector.py  Workflow.py  ZooniverseFunctions.py  animl-py test.ipynb  run_tf_detector.py
animl-py/src/animl.egg-info/: PKG-INFO  SOURCES.txt
animl-py/src/animl_KSwanson.egg-info/: PKG-INFO  SOURCES.txt
examples/: .RData  FullWorkflow_animl.R  TrainingWorkflow.R  Workflow_animl-py.R  Zooniverse_Integration.R  groundtruth.csv  pipeline_example.R
inst/: animlenv.yml
man/: ImageGenerator.Rd  ImageGeneratorSize.Rd  (+82 more)
(+24 files in other folders)
