[metadata]
name = animl-KSwanson
version = 1.0.0
author = Kyra Swanson
author_email = tswanson@sdzwa.org
description = Functions required to classify subjects within camera trap field data. The package can handle both images and videos. The authors recommend a two-step approach using Microsoft's 'MegaDector' model and then a second model trained on the classes of interest.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/icr-ctl/animl
project_urls =
    Bug Tracker = https://github.com/icr-ctl/animl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
