[metadata]
name = animl
version = 1.0.1
author = Kyra Swanson
author_email = tswanson@sdzwa.org
description = Functions required to classify subjects within camera trap field data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/icr-ctl/animl
project_urls =
    Bug Tracker = https://github.com/icr-ctl/animl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
